2002-04-14  Abel Cheung  <maddog@linux.org.hk>

	* Makefile.am: Include ghex.desktop.in in EXTRA_DIST, not ghex.desktop
	* configure.in: AC_INIT use ghex.desktop.in instead.
	* ghex.desktop: Removed.

2002-04-09  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added 'ms' to ALL_LINGUAS.
	* po/ms.po: Updated Malay Translation.

2002-03-27  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c (about_cb): applied a patch from Yogeesh MB to reenable
	the about dialog. added Shivram to authors.
	* src/converter.c (set_values): take grouping into account.
	* src/ghex-mdi.c (ghex_mdi_drag_data_received_handler): made DnD work.

2002-03-26  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/main.c: Setting the default icon with the absolute path to the
	pixmap file.
	* src/Makefile.am: Changes related to the above.

2002-03-18  Jaka Mocnik  <jaka@gnu.org>

	* src/chartable.c: only show chars < 0x7f.
	* src/ghex-mdi.[ch]: set state of insert toggle item and group type
	radio items when view changes.
	* src/hex-document-ui.c: removed some obsolete code.
	* src/bonobo-mdi.c: removed some obsolete code.
	attempt to enable dragging of notebook pages to new top level windows.
	still crashes some but this needs fixing!
	* src/gtkhex.c (is_displayable): make it stricter as the previous
	incarnation caused trouble to pango.

2002-03-10  Shivram U  <shivaram.upadhyayula@wipro.com>

	* configure.in: Added gettext changes.
	* src/main.c : (main) Added locale changes.
	* src/print.c, src/ui.c : Completed the print functionality changes.
	* src/preferences.c : (apply_changes_cb) Reverting back to the old
	functionality. Changes to group type does not update the views
 
2002-03-08  Laszlo Peter  <laca@ireland.sun.com>

	* configure.in: check for popt, define POPT_LIBS
	* src/Makefile.am: link to POPT_LIBS

2002-03-06  Shivram U  <shivaram.upadhyayula@wipro.com>
	* Makefile.am : Added desktop rule to install the ghex.desktop file
	and the gnome-ghex.png icon.