@@ -20,10 +20,7 @@ AC_PROG_CC
 dnl AC_PROG_CPP
 AC_STDC_HEADERS
 dnl AC_ARG_PROGRAM
-dnl AM_PROG_LIBTOOL
-
-dnl Added AC_PROG_LIBTOOL -- SnM
-AC_PROG_LIBTOOL
+AM_PROG_LIBTOOL
 
 AC_PROG_INSTALL
 AC_PROG_LN_S
