@@ -1,3 +1,8 @@
+2002-04-23  Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* configure.in: Replace AC_PROG_LIBTOOL with AM_PROG_LIBTOOL
+	* src/chartable.c: Converted GtkCList to GtkTreeView.
+
 2002-04-14  Abel Cheung  <maddog@linux.org.hk>
 
 	* Makefile.am: Include ghex.desktop.in in EXTRA_DIST, not ghex.desktop
